[tool.poetry]
name = "spirit-of-rnc"
version = "2.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spirit_of_rnc"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20"
telegraph = "^2.2.0"
google-api-python-client = "^2.70.0"
google-auth-oauthlib = "^0.8.0"
parsel = "^1.7.0"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
