[tool.poetry]
name = "spirit-of-rnc"
version = "2.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "spirit_of_rnc"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["job-queue", "rate-limiter", "webhooks"], version = "^20.0"}
telegraph = "^2.2.0"
google-api-python-client = "^2.70.0"
google-auth-oauthlib = "^0.8.0"
parsel = "^1.7.0"
oauth2client = "^4.1.3"
tqdm = "^4.64.1"
pytz = "^2022.7"
black = "^22.12.0"
isort = "^5.11.4"

[tool.black]
line-length=119
target-version=['py311']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
